--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -3,54 +3,57 @@
   padding: 6rem 8rem;
   box-sizing: border-box;
 }
-.about-div{
+.about-div {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-.about-pic{
-  flex:1;
+.about-pic {
+  height: 20rem;
+  flex: 1;
+  margin-left: 7rem;
 }
 
-.about-text{
-  flex:1;
+.about-text {
+  flex: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   justify-self: center;
-
 }
 
-.btn{
-    padding: 1rem 1.5rem;
-    text-align: center;
-    margin-top: 2rem;
-    font-weight:600;
-    font-size: 1.2rem;
+.btn {
+  padding: 1rem 1.5rem;
+  text-align: center;
+  margin-top: 2rem;
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: rgb(62, 168, 175);
 }
 
-.btn-primary{
+.btn-primary {
   border: 2px solid #333;
   border-radius: 10px;
-  transition:all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
 
-.btn-primary:hover{
-  background:#43b97f;
+.btn-primary:hover {
+  background: #0ce27a;
   border: 2px solid #43b97f;
-  color:#fff;
+  color: #fff;
 }
 
-.heading{
+.heading {
   margin-bottom: 2rem;
   text-align: center;
 }
 
-.about .heading{
+.about .heading {
   text-align: center;
-  margin-left: 4rem;
+  margin-left: 2rem;
+  font-size: 50px;
 }
 @media only screen and (max-width: 1045px) {
   .about {
