--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -10,24 +10,41 @@
 }
 
 .about-pic {
-  height: 20rem;
+  border-radius: 50%;
+  height: 25rem;
   flex: 1;
-  margin-left: 7rem;
+  margin-left: 12rem;
+}
+.about-picc {
+  border-radius: 50%;
+  height: 350px;
+  width: 300px;
+  margin-left: -9rem;
+  margin-top: -4rem;
 }
 
 .about-text {
+  margin-bottom: 5rem;
   flex: 2;
+  height: 20rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   justify-self: center;
+  line-height: 50px;
 }
-
+.about-font {
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.text {
+  height: 15rem;
+  margin-bottom: -35rem;
+}
 .btn {
   padding: 1rem 1.5rem;
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 40rem;
   font-weight: 600;
   font-size: 1.2rem;
   color: rgb(62, 168, 175);
@@ -51,9 +68,15 @@
 }
 
 .about .heading {
+  margin-bottom: 7rem;
   text-align: center;
   margin-left: 2rem;
   font-size: 50px;
+}
+.copyright {
+  float: left;
+  margin-left: -6rem;
+  margin-bottom: -9rem;
 }
 @media only screen and (max-width: 1045px) {
   .about {
